--- a/AvengersListView/src/main/res/values/strings.xml
+++ b/AvengersListView/src/main/res/values/strings.xml
@@ -13,6 +13,6 @@
 
     </string-array>
 
-    <string name="app_name">Listview</string>
+    <string name="app_name">Avengers ListView</string>
 
 </resources>
